--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "repository": "",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "client": "node scripts/start-client.js",
+    "start": "concurrently \"nodemon app.js\" \"npm run client\"",
+    "build": "node scripts/build.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "installDeps": "yarn && cd client && yarn"
   },
   "author": "Luke Chambers",
   "cloud-repo-tools": {
@@ -44,7 +49,8 @@
     "@google-cloud/nodejs-repo-tools": "2.2.1",
     "ava": "0.25.0",
     "proxyquire": "1.8.0",
-    "sinon": "4.3.0"
+    "sinon": "4.3.0",
+    "concurrently": "^3.5.0"
   },
   "engines": {
     "node": ">=4.3.2"
