--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "repository": "",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "client": "node scripts/start-client.js",
     "start": "concurrently \"nodemon app.js\" \"npm run client\"",
+    "client": "node scripts/start-client.js",
     "build": "node scripts/build.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "installDeps": "yarn && cd client && yarn"
@@ -40,6 +39,7 @@
     "@google-cloud/datastore": "1.3.4",
     "body-parser": "1.18.2",
     "express": "4.16.2",
+    "http-proxy-middleware": "^0.18.0",
     "lodash": "4.17.5",
     "nconf": "0.10.0",
     "prompt": "1.0.0",
