--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
   "dependencies": {
     "@google-cloud/datastore": "1.3.4",
     "body-parser": "1.18.2",
+    "concurrently": "^3.5.0",
     "express": "4.16.2",
     "http-proxy-middleware": "^0.18.0",
     "lodash": "4.17.5",
     "nconf": "0.10.0",
+    "nodemon": "^1.17.5",
     "prompt": "1.0.0",
     "uglify-js": "3.3.12"
   },
@@ -50,7 +52,8 @@
     "ava": "0.25.0",
     "proxyquire": "1.8.0",
     "sinon": "4.3.0",
-    "concurrently": "^3.5.0"
+    "concurrently": "^3.5.0",
+    "nodemon": "^1.17.5"
   },
   "engines": {
     "node": ">=4.3.2"
