--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "node scripts/start-client.js",
     "build": "node scripts/build.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "installDeps": "yarn && cd client && yarn"
+    "installDeps": "yarn && cd client && yarn",
+    "seed": "node scripts/seed.js"
   },
   "author": "Luke Chambers",
   "cloud-repo-tools": {
