--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "1.3.4",
+    "axios": "^0.18.0",
     "body-parser": "1.18.2",
     "concurrently": "^3.5.0",
     "express": "4.16.2",
