--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "http-proxy-middleware": "^0.18.0",
     "lodash": "4.17.5",
     "nconf": "0.10.0",
+    "nodemailer": "^4.6.7",
     "nodemon": "^1.17.5",
     "prompt": "1.0.0",
     "uglify-js": "3.3.12",
