--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App",
+  "short_name": "TrashTalks",
   "name": "TrashTalks",
   "start_url": "./index.html",
   "display": "standalone",
